  Entity.validateType() does not accept EntityKey values for type ENTITY anymore
  ThreadLocal functionality removed from date formats
  DateUtil.getDateMask(SimpleDateFormat) added
  DateMaskFormat removed, replaced by SimpleDateFormat throughout
  EntityComboBoxModel now uses setSelectedItemByPrimaryKey when setSelectedItem is called, for better lazyLoading support
  EntityKeyCriteria, changed parameter type from varargs to list
  EntityDbConnection refactored (40 loc poof! gone)
  IEntityDbRemoteServerAdmin.get/setConnectionTimeout() added
  ServerMonitor/ServerMonitorPanel, added the above configuration setting
  PropertySummaryModel refactored out of PropertySummaryPanel
  PropertySummaryModelTest added
  EntityTableModel.getPropertySummaryModel(propertyID/Property) created
  EntityTableModel.propertySummaryModels map field introduced
  EntityTableSearchModel.stSimpleSearch converted to a simple boolean, with a getter, added to constructor as well
  EntityPanel.detailEntityPanelProviders Map renamed to detailEntityPanels and turned into a List
  EntityPanel constructor now initializes the EntityTablePanel and calls setupControls()
  EntityPanel.rowColoring field removed due to the above
  EntityPanel.queryConfigurationAllowed moved to EntityTableModel
  EntityPanel.initializePanel() now returns the EntityPanel instance
  EntityTablePanel.propertySummaryPanels map field removed, unused
  common.ui.printing.* deleted
  EntityTableModel.removeAll() removed, code moved to clear()
  IEntityDbRemote, all methods removed, apparently they were unnecessary
  EntityDbConnection, minor changes in throws clauses
  EntityDbRemoteAdapter, minor changes in throws clauses
  IEntityDb.delete() argument is now List<EntityKey> instead of List<Entity>
  EntityUtil.getWhereCondition() overloaded, ValueProvider interface introduced
  I prefix removed from interface names
  PropertyCriteria now adds paranthesis around in conditions, fixes bug due to 1000 item in list limit